@@ -1,3 +1,9 @@
+2001-08-14  James Henstridge  <james@daa.com.au>
+
+	* generate/generate.py (FunctionDefsParser): various changes to
+	check for NULL returns from functions that return strings, objects
+	or boxed types.
+
 2001-05-30  Johan Dahlin  <zilch.am@home.se>
 
 	* pygdkpixbuf.h: in the init_macro: s/_gdkpixbuf/gdkpixbuf/
